tests/NormalTests/paczka1/small_fuzzy/61394806.err
Error in line 1: GsWKMR S816 59,46
Error in line 4: o4b8W S450 27,9
Error in line 8: o4b8W S816 73,6
Error in line 2: GsWKMR S816 227,1
